@startuml overview

' Database
'---------
interface Database {
    +metaPopulation
    +accessControlById
    +permission()
    +diff()
    +sync()
    +security()
}
Database ..> Session : createSession()
Database ..> DatabaseObject : get()

interface DatabaseObject{
    +objectType
    +id
    +version
    +roleByRoleTypeId
    +isPermitted()
}
DatabaseObject --> Database

' Session
'---------
interface Session {
    +hasChanges
    +delete()
    +pushRequest()
    +pushResponse()
    +reset()
}
Session --> Database
Session ..> SessionObject : get()
Session ..> SessionObject : create()

interface SessionObject {
    +id
    +objectType
    +newId
    +version
    +isNew
    +hasChanges
    --
    +canRead()
    +canWrite()
    +canExecute()
    +isPermited()
    ..
    +get()
    +set()
    +add()
    +remove()
    ..
    getAssociation()
    ..
    save()
    saveNew()
    reset()
}
SessionObject --> Session
SessionObject --> DatabaseObject

@enduml
